--- a/index.html
+++ b/index.html
@@ -181,7 +181,12 @@
                                         </div>
 
                                         <div class="hero-slide__image-block">
-                                            <img src="./src/assets/images/hero-image.png" alt="Hero slide image" />
+                                            <img
+                                                src="./src/assets/images/hero-image.png"
+                                                alt="Hero slide image"
+                                                width="391"
+                                                height="407"
+                                            />
                                         </div>
                                     </article>
                                 </div>
@@ -199,7 +204,12 @@
                                         </div>
 
                                         <div class="hero-slide__image-block">
-                                            <img src="./src/assets/images/hero-image.png" alt="Hero slide image" />
+                                            <img
+                                                src="./src/assets/images/hero-image.png"
+                                                alt="Hero slide image"
+                                                width="391"
+                                                height="407"
+                                            />
                                         </div>
                                     </article>
                                 </div>
@@ -221,6 +231,8 @@
                                 src="./src/assets/images/logos/logo-client-1.svg"
                                 alt="Client logo"
                                 class="clients__client"
+                                width="48"
+                                height="48"
                             />
                         </li>
                         <li class="clients__item">
@@ -228,6 +240,8 @@
                                 src="./src/assets/images/logos/logo-client-2.svg"
                                 alt="Client logo"
                                 class="clients__client"
+                                width="48"
+                                height="48"
                             />
                         </li>
                         <li class="clients__item">
@@ -235,6 +249,8 @@
                                 src="./src/assets/images/logos/logo-client-3.svg"
                                 alt="Client logo"
                                 class="clients__client"
+                                width="48"
+                                height="48"
                             />
                         </li>
                         <li class="clients__item">
@@ -242,6 +258,8 @@
                                 src="./src/assets/images/logos/logo-client-4.svg"
                                 alt="Client logo"
                                 class="clients__client"
+                                width="48"
+                                height="48"
                             />
                         </li>
                         <li class="clients__item">
@@ -249,6 +267,8 @@
                                 src="./src/assets/images/logos/logo-client-5.svg"
                                 alt="Client logo"
                                 class="clients__client"
+                                width="48"
+                                height="48"
                             />
                         </li>
                         <li class="clients__item">
@@ -256,6 +276,8 @@
                                 src="./src/assets/images/logos/logo-client-6.svg"
                                 alt="Client logo"
                                 class="clients__client"
+                                width="48"
+                                height="48"
                             />
                         </li>
                         <li class="clients__item">
@@ -263,6 +285,8 @@
                                 src="./src/assets/images/logos/logo-client-3.svg"
                                 alt="Client logo"
                                 class="clients__client"
+                                width="48"
+                                height="48"
                             />
                         </li>
                     </ul>
@@ -281,6 +305,8 @@
                                         src="./src/assets/images/icons/icon-community-1.svg"
                                         alt=""
                                         class="community-item__icon"
+                                        width="48"
+                                        height="48"
                                     />
                                 </div>
                                 <h3 class="community-item__headline">Membership Organisations</h3>
@@ -297,6 +323,8 @@
                                         src="./src/assets/images/icons/icon-community-2.svg"
                                         alt=""
                                         class="community-item__icon"
+                                        width="48"
+                                        height="48"
                                     />
                                 </div>
                                 <h3 class="community-item__headline">National Associations</h3>
@@ -313,6 +341,8 @@
                                         src="./src/assets/images/icons/icon-community-3.svg"
                                         alt=""
                                         class="community-item__icon"
+                                        width="48"
+                                        height="48"
                                     />
                                 </div>
                                 <h3 class="community-item__headline">Clubs And Groups</h3>
@@ -329,7 +359,7 @@
             <section class="unlock">
                 <div class="unlock__body wrapper">
                     <div class="unlock__image-block">
-                        <img src="./src/assets/images/unlock-image.png" alt="Unlock image" />
+                        <img src="./src/assets/images/unlock-image.png" alt="Unlock image" width="442" height="433" />
                     </div>
                     <div class="unlock__text-block">
                         <h2 class="unlock__headline">The unseen of spending three years at Pixelgrade</h2>
@@ -354,28 +384,28 @@
                     </div>
                     <div class="achievements__counts-block">
                         <article class="achievement-count">
-                            <img src="./src/assets/images/icons/icon-achivement-1.svg" alt="" />
+                            <img src="./src/assets/images/icons/icon-achivement-1.svg" alt="" width="48" height="48" />
                             <div class="achievement-count__content">
                                 <h3 class="achievement-count__headline">2,245,341</h3>
                                 <p class="achievement-count__desc">Members</p>
                             </div>
                         </article>
                         <article class="achievement-count">
-                            <img src="./src/assets/images/icons/icon-achivement-2.svg" alt="" />
+                            <img src="./src/assets/images/icons/icon-achivement-2.svg" alt="" width="48" height="48" />
                             <div class="achievement-count__content">
                                 <h3 class="achievement-count__headline">46,328</h3>
                                 <p class="achievement-count__desc">Clubs</p>
                             </div>
                         </article>
                         <article class="achievement-count">
-                            <img src="./src/assets/images/icons/icon-achivement-3.svg" alt="" />
+                            <img src="./src/assets/images/icons/icon-achivement-3.svg" alt="" width="48" height="48" />
                             <div class="achievement-count__content">
                                 <h3 class="achievement-count__headline">828,867</h3>
                                 <p class="achievement-count__desc">Event Bookings</p>
                             </div>
                         </article>
                         <article class="achievement-count">
-                            <img src="./src/assets/images/icons/icon-achivement-4.svg" alt="" />
+                            <img src="./src/assets/images/icons/icon-achivement-4.svg" alt="" width="48" height="48" />
                             <div class="achievement-count__content">
                                 <h3 class="achievement-count__headline">1,926,436</h3>
                                 <p class="achievement-count__desc">Payments</p>
@@ -388,7 +418,12 @@
             <section class="calender">
                 <div class="calender__body wrapper">
                     <div class="calender__image-block">
-                        <img src="./src/assets/images/calender-image.png" alt="Calender image" />
+                        <img
+                            src="./src/assets/images/calender-image.png"
+                            alt="Calender image"
+                            width="442"
+                            height="434"
+                        />
                     </div>
                     <div class="calender__text-block">
                         <h2 class="calender__headline">How to design your site footer like we did</h2>
@@ -410,7 +445,12 @@
                     <h2 class="sr-only">Our Customers</h2>
 
                     <div class="customers__image-block">
-                        <img src="./src/assets/images/customers-image.png" alt="Customers image" />
+                        <img
+                            src="./src/assets/images/customers-image.png"
+                            alt="Customers image"
+                            width="326"
+                            height="327"
+                        />
                     </div>
                     <div class="customers__text-block">
                         <div class="customers__quote-block">
@@ -435,6 +475,8 @@
                                     src="./src/assets/images/logos/logo-client-1.svg"
                                     alt="Client logo"
                                     class="customers__customer"
+                                    width="48"
+                                    height="48"
                                 />
                             </li>
                             <li class="customers__item">
@@ -442,6 +484,8 @@
                                     src="./src/assets/images/logos/logo-client-2.svg"
                                     alt="Client logo"
                                     class="customers__customer"
+                                    width="48"
+                                    height="48"
                                 />
                             </li>
                             <li class="customers__item">
@@ -449,6 +493,8 @@
                                     src="./src/assets/images/logos/logo-client-3.svg"
                                     alt="Client logo"
                                     class="customers__customer"
+                                    width="48"
+                                    height="48"
                                 />
                             </li>
                             <li class="customers__item">
@@ -456,6 +502,8 @@
                                     src="./src/assets/images/logos/logo-client-4.svg"
                                     alt="Client logo"
                                     class="customers__customer"
+                                    width="48"
+                                    height="48"
                                 />
                             </li>
                             <li class="customers__item">
@@ -463,6 +511,8 @@
                                     src="./src/assets/images/logos/logo-client-5.svg"
                                     alt="Client logo"
                                     class="customers__customer"
+                                    width="48"
+                                    height="48"
                                 />
                             </li>
                             <li class="customers__item">
@@ -470,6 +520,8 @@
                                     src="./src/assets/images/logos/logo-client-6.svg"
                                     alt="Client logo"
                                     class="customers__customer"
+                                    width="48"
+                                    height="48"
                                 />
                             </li>
                             <li class="customers__item">
@@ -500,6 +552,8 @@
                                     src="./src/assets/images/caring-image-1.png"
                                     alt="Caring image"
                                     class="caring-item__image"
+                                    width="368"
+                                    height="287"
                                 />
                                 <div class="caring-item__content">
                                     <h3 class="caring-item__headline">
@@ -520,6 +574,8 @@
                                     src="./src/assets/images/caring-image-2.png"
                                     alt="Caring image"
                                     class="caring-item__image"
+                                    width="368"
+                                    height="287"
                                 />
                                 <div class="caring-item__content">
                                     <h3 class="caring-item__headline">
@@ -540,6 +596,8 @@
                                     src="./src/assets/images/caring-image-3.png"
                                     alt="Caring image"
                                     class="caring-item__image"
+                                    width="368"
+                                    height="287"
                                 />
                                 <div class="caring-item__content">
                                     <h3 class="caring-item__headline">
